[tool.poetry]
name = "pyrostarter"
version = "0.2.0"
description = "Pyrogram CLI Template Creator"
authors = ["ahmetveburak <https://t.me/musaitbiyerde>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrostarter = "pyrostarter.pyrostarter:main"

[tool.black]
line-length = 120