[tool.poetry]
name = "pyrostarter"
version = "0.1.5"
description = "Pyrogram CLI Template Creator"
authors = ["ahmetveburak <https://t.me/musaitbiyerde>"]
license = "GNU General Public License v3 or later (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.6.2"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrostarter = "pyrostarter.pyrostarter:main"

[tool.black]
line-length = 120

[tool.mypy]
disable_error_code = "func_no_return"
